--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -48,8 +48,25 @@
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Pelicula" asp-action="Index">Pelicula</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Genero" asp-action="Index">Género</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Tipo" asp-action="Index">Tipo</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Subtitulo" asp-action="Index">Subtitulo</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Sonido" asp-action="Index">Sonido</a></li>
                                     <li>----------------------</li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="SignOut">Salir</a></li>
+                                </ul>
+                            </div>
+
+                            &nbsp;
+
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Finanzas
+                                </button>
+                                <ul class="dropdown-menu" style="">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="CondicionPago" asp-action="Index">Condición de Pago</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="ListaPrecio" asp-action="Index">Lista de Precio</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Tarifa" asp-action="Index">Tarifa</a></li>
+                   
+
                                 </ul>
                             </div>
                       
@@ -61,6 +78,7 @@
                                 </button>
                                 <ul class="dropdown-menu" style="">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Programar</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Sala" asp-action="Index">Sala</a></li>
                              
                                 </ul>
                             </div>
