--- a/Web/Views/ListaPrecio/Edit.cshtml
+++ b/Web/Views/ListaPrecio/Edit.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Precio" class="control-label"></label>
-                <input asp-for="Precio" class="form-control" />
+                <input asp-for="Precio" class="form-control" id="inputPrecio" />
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -50,5 +50,25 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{/* await Html.RenderPartialAsync("_ValidationScriptsPartial"); */}
+
+    <script>
+        $("#inputPrecio").on({
+            "focus": function (event) {
+                $(event.target).select();
+            },
+            "keyup": function (event) {
+                $(event.target).val(function (index, value) {
+                    return value.replace(/\D/g, "")
+                        .replace(/([0-9])([0-9]{2})$/, '$1,$2')
+                        .replace(/\B(?=(\d{3})+(?!\d)\,?)/g, ".");
+                });
+            }
+        });
+    </script>
+
+
+
 }
+
+
