ajustes programación de funciones

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                                     Funciones
                                 </button>
                                 <ul class="dropdown-menu" style="">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Programar</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Programar" asp-action="Index">Programar</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Sala" asp-action="Index">Sala</a></li>
                              
                                 </ul>
