--- a/Web/Views/Tarifa/Details.cshtml
+++ b/Web/Views/Tarifa/Details.cshtml
@@ -28,6 +28,14 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ListaPrecio.Descripcion)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TarifaPrecio)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TarifaPrecio)
+        </dd>
+
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaRegistro)
         </dt>
