--- a/Web/Views/Tarifa/Index.cshtml
+++ b/Web/Views/Tarifa/Index.cshtml
@@ -16,7 +16,7 @@
                 Tarifa
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PorcentajeDescuento)
+                @Html.DisplayNameFor(model => model.TarifaPrecio)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ListaPrecio)
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.ListaPrecio.Descripcion)
             </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.PrecioConDescuento)
+                    @Html.DisplayFor(modelItem => item.TarifaPrecio)
                 </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRegistro)
