--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white bPedido-bottom box-shadow mb-3">
             <div class="container-fluid">
                 @if (SignInManager.IsSignedIn(User))
                 {
@@ -57,6 +57,7 @@
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Tipo" asp-action="Index">Tipo</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Subtitulo" asp-action="Index">Subtitulo</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Sonido" asp-action="Index">Sonido</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Sala" asp-action="Index">Sala</a></li>
                                     <li>----------------------</li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="SignOut">Salir</a></li>
                                 </ul>
@@ -85,10 +86,13 @@
                                 </button>
                                 <ul class="dropdown-menu" style="">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Programar" asp-action="Index">Programar</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Sala" asp-action="Index">Sala</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Pedido" asp-action="Index">Pedido</a></li>
+                                    
                              
                                 </ul>
                             </div>
+
+
                         </ul>
                     </div>
                 }
@@ -102,7 +106,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="bPedido-top footer text-muted">
         <div class="container">
             &copy; 2023 - Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
