--- a/Web/Views/Programar/Create.cshtml
+++ b/Web/Views/Programar/Create.cshtml
@@ -47,7 +47,7 @@
             </div>
             <div class="container col-12">
                 <div class="col-md-12 p-0 m-0 bg-light">
-                    <table id="tblSolicitudDespachoArticulo" style="border: 1px solid #dcdcdc;" class="table table-sm CodesTable">
+                    <table id="tblSolicitudDespachoArticulo" style="bPedido: 1px solid #dcdcdc;" class="table table-sm CodesTable">
                        @*  <thead>
                             <tr>
                                 <th>
