--- a/Web/Views/Shared/_Layout.cshtml.css
+++ b/Web/Views/Shared/_Layout.cshtml.css
@@ -14,20 +14,20 @@ a {
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
-  border-color: #1861ac;
+  bPedido-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1b6ec2;
-  border-color: #1861ac;
+  bPedido-color: #1861ac;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
+.bPedido-top {
+  bPedido-top: 1px solid #e5e5e5;
 }
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+.bPedido-bottom {
+  bPedido-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
