--- a/Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Salir</button>
+            <button id="logout" type="submit" class="nav-link btn btn-link text-dark bPedido-0">Salir</button>
         </form>
     </li>
 }
