--- a/Web/Views/ListaPrecio/ImportarListaPrecio.cshtml
+++ b/Web/Views/ListaPrecio/ImportarListaPrecio.cshtml
@@ -1,14 +1,14 @@
 ﻿@model Web.Models.ListaPrecio
 
 @{
-    ViewData["Title"] = "Importar Lista";
+    ViewData["Title"] = "Importar Lista de Precio";
 }
 
 <div class="row">
     <div class="col-sm-12">
         
         <div class="card">
-            <div class="card-header"> Importar Lista</div>
+            <div class="card-header"> Importar Lista de Precio</div>
             <div class="card-body">
 
                 <div class="row">
@@ -17,9 +17,9 @@
                         <span class="text-danger" id="errorFile"></span>
                     </div>
                     <div class="col-sm-6">
-                        <button class="btn btn-warning" onclick="mostrarDatos();">Mostrar datos</button>
-                        <button class="btn btn-danger" onclick="limpiarDatos();">Limpiar datos</button>
-                        <button class="btn btn-success" onclick="enviarDatos();">Importar datos </button>
+                        <button class="btn btn-warning" onclick="mostrarDatos();">Cargar</button>
+                        <button class="btn btn-danger" onclick="limpiarDatos();">Limpiar </button>
+                        <button class="btn btn-success" onclick="enviarDatos();">Importar</button>
                     </div>
 
                     <div class="col-sm-2">
