--- a/Web/Views/ListaPrecio/Index.cshtml
+++ b/Web/Views/ListaPrecio/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="col-sm">
             <a asp-action="Create" class="btn btn-primary">Nueva Lista</a>
             &nbsp;&nbsp;
-            <a asp-action="ImportarListaPrecio" class="btn btn-success">Importar Lista</a>
+            <a asp-action="ImportarListaPrecio" class="btn btn-success">Importar</a>
         </div>
     </div>
 </p>
