create funcion x tarifas

--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -86,6 +86,7 @@
                                 </button>
                                 <ul class="dropdown-menu" style="">
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Programar" asp-action="Index">Programar</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Funcion" asp-action="Index">Función</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Pedido" asp-action="Index">Pedido</a></li>
                                     
                              
