validaciones de formulario

--- a/Web/Views/Funcion/Create.cshtml
+++ b/Web/Views/Funcion/Create.cshtml
@@ -23,16 +23,18 @@
                 <div class="form-group col-md-6">
                     <label asp-for="PeliculaRefId" class="control-label"></label>
                     <select asp-for="PeliculaRefId" class="form-control" asp-items="ViewBag.PeliculaRefId">
-                        <option>Seleccione una pelicula</option>
+                        <option value="">Seleccione una pelicula</option>
                     </select>
+                    <span asp-validation-for="PeliculaRefId" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label asp-for="SalaRefId" class="control-label"></label>
                     <select asp-for="SalaRefId" class="form-control" asp-items="ViewBag.SalaRefId">
-                        <option>Seleccione una sala</option>
+                        <option value="">Seleccione una sala</option>
                     </select>
+                    <span asp-validation-for="SalaRefId" class="text-danger"></span>
                 </div>
                
             </div>
