--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -85,9 +85,8 @@
                                     Funciones
                                 </button>
                                 <ul class="dropdown-menu" style="">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Programar" asp-action="Index">Programar</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Funcion" asp-action="Index">Función</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Pedido" asp-action="Index">Pedido</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Funcion" asp-action="Index">Programar</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Pedido" asp-action="Index">Vender</a></li>
                                     
                              
                                 </ul>
