--- a/Web/Views/Shared/EditorTemplates/FuncionTarifa.cshtml
+++ b/Web/Views/Shared/EditorTemplates/FuncionTarifa.cshtml
@@ -3,11 +3,9 @@
 <div class="form-row">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group col-md-6">
-       
         <select asp-for="TarifaRefId" class="form-control" asp-items="ViewBag.TarifaRefId">
-            <option>Seleccione una tarifa</option>
+            <option value="">Seleccione una tarifa</option>
         </select>
         <span asp-validation-for="TarifaRefId" class="text-danger"></span>
-       
     </div>
 </div>
