--- a/Web/Views/Funcion/Index.cshtml
+++ b/Web/Views/Funcion/Index.cshtml
@@ -44,8 +44,9 @@
                 @Html.DisplayNameFor(model => model.Sala)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaRegistro)
+                @Html.DisplayNameFor(model => model.Tarifas)
             </th>
+        
             <th></th>
         </tr>
     </thead>
@@ -61,9 +62,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Sala.Descripcion) - @Html.DisplayFor(modelItem => item.Sala.Tipo.Descripcion) 
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaRegistro)
-            </td>
+
+                <td>
+                    <ul>
+                    @for (int i = 0; i < item.Tarifas.Count(); i++)
+                    {
+
+                            <li> @item.Tarifas[i].Tarifa.Descripcion (@item.Tarifas[i].Tarifa.TarifaPrecio)</li>
+                   
+                    }
+                    </ul>
+                </td>
+
+           
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
